# ghana

./: 2020_health_facilities_ghana.csv  README.md  gha_adminboundaries_tabulardata.csv  ghana_districts.geojson  ghana_regions.geojson  pyproject.toml  requirements.txt  test.geojson  test.qmd
binder/: requirements.txt
ghana_deta/: main.py
ghana_deta/.deta/: prog_info  state
