[tool.poetry]
name = "ghana"
version = "0.1.0"
description = ""
authors = ["Gloria Macia <g.macia-munoz@lse.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
folium = "^0.13.0"
pandas = "^1.5.1"
voila = "^0.4.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
